--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.robolectric</groupId>
   <artifactId>robolectric</artifactId>
-  <version>2.3</version>
+  <version>2.4-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Robolectric</name>
   <description>An alternative Android testing framework.</description>
