Steal working android setup from deckard

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-language: java
+language: android
 before_install:
-    - wget http://dl.google.com/android/android-sdk_r22.3-linux.tgz
-    - tar xzf android-sdk_r22.3-linux.tgz
-    - export ANDROID_HOME=$PWD/android-sdk-linux
-    - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-    - echo y | android update sdk --filter platform-tools,android-18,addon-google_apis-google-18,extra-android-m2repository --no-ui --force
+    - echo "y" | android update sdk --no-ui --filter platform-tools,tools
+    - echo "y" | android update sdk --no-ui --filter build-tools-20.0.0
+    - echo "y" | android update sdk --no-ui --filter android-18
+    - echo "y" | android update sdk --no-ui --filter addon-google_apis-google-18,extra-android-support
     - ./scripts/install-maps-jar.sh
     - ./scripts/install-support-jar.sh
 
