Fix bytecode instrumentation to work on pre-instrumented classes.
Currently, AsmInstrumentingClassLoader wipes out everything in a constructor leading to the invokespecial for "<init>". If the class has already been instrumented, for example for Emma or Jacoco offline code coverage, then part of this instrumentation is destroyed, failing verification at load time due to incorrect bytecode trying to access local variables no longer defined.

Ideally, instrumented classes should not overlap with classes to shadow, but this is not easily enforced. Jacoco is used to instrument everything following a certain package pattern, at the build system level, while shadows can be selected programatically. This bug prevents us from having a working coverage setup.

--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,14 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>org.jacoco.agent</artifactId>
+      <classifier>runtime</classifier>
+      <version>0.7.1.201405082137</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.intellij</groupId>
       <artifactId>annotations</artifactId>
       <version>12.0</version>
