--- a/robolectric-processor/pom.xml
+++ b/robolectric-processor/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-parent</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
   
   <groupId>org.robolectric</groupId>
   <artifactId>robolectric-processor</artifactId>
-  <version>${processor.version}</version>
   <packaging>jar</packaging>
-
+  <version>0.9-SNAPSHOT</version>
+  
   <name>Robolectric Annotation Processor</name>
   <url>http://robolectric.org</url>
   <description>Annotation processor for Robolectric.</description>
@@ -25,7 +25,6 @@
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>robolectric-annotations</artifactId>
-      <version>${annotations.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -34,8 +33,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
+      <artifactId>junit-dep</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -47,8 +45,6 @@
     <dependency>
       <groupId>com.intellij</groupId>
       <artifactId>annotations</artifactId>
-      <version>${intellij.annotations.version}</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.sun</groupId>
@@ -62,12 +58,6 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-          <compilerArgument>-proc:none</compilerArgument>
-        </configuration>
       </plugin>
     </plugins>
   </build>
