--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.robolectric</groupId>
   <artifactId>robolectric-parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Robolectric All</name>
   <description>An alternative Android testing framework.</description>
@@ -33,7 +33,7 @@
       <dependency>
         <groupId>org.robolectric</groupId>
         <artifactId>robolectric-annotations</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
 
       <dependency>
@@ -50,6 +50,12 @@
         <scope>provided</scope>
       </dependency>
 
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>16.0.1</version>
+      </dependency>
+      
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
@@ -78,36 +84,39 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-          <compilerArgument>-proc:none</compilerArgument>
-        </configuration>
-      </plugin>
+          <configuration>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.target}</target>
+            <compilerArgument>-proc:none</compilerArgument>
+          </configuration>
+        </plugin>
 
-      <plugin>
-        <groupId>org.bsc.maven</groupId>
-        <artifactId>maven-processor-plugin</artifactId>
-        <version>2.2.1</version>
-        <executions>
-          <execution>
-            <id>process</id>
-            <goals>
+        <plugin>
+          <groupId>org.bsc.maven</groupId>
+          <artifactId>maven-processor-plugin</artifactId>
+          <version>2.2.1</version>
+          <configuration>
+            <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target}</compilerArguments>
+          </configuration>
+          <executions>
+            <execution>
+              <id>process</id>
+              <goals>
                 <goal>process</goal>
-            </goals>
-            <phase>generate-sources</phase>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.robolectric</groupId>
-            <artifactId>robolectric-processor</artifactId>
-            <version>0.9-SNAPSHOT</version>
-          </dependency>
-        </dependencies>
-      </plugin>
+              </goals>
+              <phase>generate-sources</phase>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.robolectric</groupId>
+              <artifactId>robolectric-processor</artifactId>
+              <version>${project.version}</version>
+            </dependency>
+          </dependencies>
+        </plugin>
       
-      <plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.13</version>
