--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.robolectric</groupId>
   <artifactId>robolectric-parent</artifactId>
-  <version>2.4</version>
+  <version>3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Robolectric All</name>
   <description>An alternative Android testing framework.</description>
