--- a/robolectric-annotations/pom.xml
+++ b/robolectric-annotations/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-parent</artifactId>
-    <version>2.4</version>
+    <version>3.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>robolectric-annotations</artifactId>
