Move ShadowWrangler.shadowOf to Shadows class in robolectric-utils module.
shadowOf is now a static method with no dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>robolectric</module>
     <module>robolectric-annotations</module>
     <module>robolectric-processor</module>
+    <module>robolectric-utils</module>
   </modules>
 
   <properties>
@@ -33,6 +34,12 @@
       <dependency>
         <groupId>org.robolectric</groupId>
         <artifactId>robolectric-annotations</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.robolectric</groupId>
+        <artifactId>robolectric-utils</artifactId>
         <version>${project.version}</version>
       </dependency>
 
