--- a/robolectric/pom.xml
+++ b/robolectric/pom.xml
@@ -25,6 +25,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.robolectric</groupId>
+      <artifactId>robolectric-utils</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit-dep</artifactId>
       <scope>provided</scope>
