--- a/robolectric/pom.xml
+++ b/robolectric/pom.xml
@@ -121,6 +121,12 @@
       <artifactId>ant</artifactId>
       <version>1.8.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.android.apps.common.testing.accessibility.framework</groupId>
+      <artifactId>accessibility-test-framework</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
