--- a/robolectric-resources/pom.xml
+++ b/robolectric-resources/pom.xml
@@ -7,7 +7,7 @@
     <version>3.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>robolectric-res</artifactId>
+  <artifactId>robolectric-resources</artifactId>
   <packaging>jar</packaging>
   <name>Robolectric Resources</name>
   <description>Robolectric classes used in parsing and managing Resources.</description>
