--- a/robolectric/pom.xml
+++ b/robolectric/pom.xml
@@ -27,7 +27,7 @@
 
     <dependency>
       <groupId>org.robolectric</groupId>
-      <artifactId>robolectric-res</artifactId>
+      <artifactId>robolectric-resources</artifactId>
     </dependency>
 
     <dependency>
