--- a/robolectric-shadows/shadows-support-v4/pom.xml
+++ b/robolectric-shadows/shadows-support-v4/pom.xml
@@ -66,6 +66,11 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+
+      <plugin>
         <groupId>org.bsc.maven</groupId>
         <artifactId>maven-processor-plugin</artifactId>
         <version>2.2.1</version>
