--- a/robolectric-shadows/shadows-httpclient/pom.xml
+++ b/robolectric-shadows/shadows-httpclient/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <groupId>org.robolectric</groupId>
-        <artifactId>robolectric-parent</artifactId>
+        <artifactId>robolectric-shadows</artifactId>
         <version>3.0-SNAPSHOT</version>
     </parent>
 
