--- a/robolectric-shadows/shadows-support-v4/pom.xml
+++ b/robolectric-shadows/shadows-support-v4/pom.xml
@@ -37,6 +37,21 @@
 
     <dependency>
       <groupId>org.robolectric</groupId>
+      <artifactId>robolectric-utils</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.robolectric</groupId>
+      <artifactId>robolectric-resources</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.robolectric</groupId>
+      <artifactId>robolectric-annotations</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.robolectric</groupId>
       <artifactId>shadows-core</artifactId>
       <classifier>19</classifier>
       <scope>provided</scope>
