Add native dependencies for linux-x86_64

--- a/robolectric-shadows/shadows-core/pom.xml
+++ b/robolectric-shadows/shadows-core/pom.xml
@@ -95,6 +95,13 @@
     <dependency>
       <groupId>com.github.axet.litedb</groupId>
       <artifactId>libsqlite</artifactId>
+      <classifier>natives-linux-x86_64</classifier>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.axet.litedb</groupId>
+      <artifactId>libsqlite</artifactId>
       <version>${libsqlite.version}</version>
       <scope>provided</scope>
     </dependency>
