--- a/robolectric-shadows/shadows-core/pom.xml
+++ b/robolectric-shadows/shadows-core/pom.xml
@@ -133,7 +133,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
           <generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>
         </configuration>
@@ -144,6 +143,14 @@
         <artifactId>maven-source-plugin</artifactId>
         <configuration>
           <classifier>${api}-sources</classifier>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <classifier>${api}-javadoc</classifier>
         </configuration>
       </plugin>
 
