--- a/robolectric-utils/pom.xml
+++ b/robolectric-utils/pom.xml
@@ -18,6 +18,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- Project Dependencies -->
     <dependency>
       <groupId>org.robolectric</groupId>
