Added code to re-throw errors as well as unchecked exceptions when calling reflectively.

--- a/robolectric-utils/pom.xml
+++ b/robolectric-utils/pom.xml
@@ -18,6 +18,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+
     <!-- Project Dependencies -->
     <dependency>
       <groupId>org.robolectric</groupId>
