--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,9 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+            <quiet>true</quiet>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
