--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ jdk:
     - oraclejdk7
     - oraclejdk8
 
+cache:
+    directories:
+        - $HOME/.m2
+
 before_install:
     - echo "y" | android update sdk --no-ui --filter platform-tools,tools
     - echo "y" | android update sdk --no-ui --filter build-tools-20.0.0
