--- a/robolectric-shadows/pom.xml
+++ b/robolectric-shadows/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>shadows-core</module>
     <module>shadows-maps</module>
+    <module>shadows-multidex</module>
     <module>shadows-support-v4</module>
     <module>shadows-httpclient</module>
   </modules>
