--- a/robolectric-shadows/shadows-core/pom.xml
+++ b/robolectric-shadows/shadows-core/pom.xml
@@ -53,6 +53,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.ibm.icu</groupId>
+      <artifactId>icu4j</artifactId>
+      <version>53.1</version>
+    </dependency>
+
     <!-- SQLite Dependencies -->
     <dependency>
       <groupId>com.almworks.sqlite4java</groupId>
