--- a/robolectric-utils/pom.xml
+++ b/robolectric-utils/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>com.google.android.apps.common.testing.accessibility.framework</groupId>
       <artifactId>accessibility-test-framework</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
